<resources>
    <string name="email">nbatista.apps@gmail.com</string>
    <string name="app_name">Sensor Monitor</string>
    <string name="author">Nídia Batista</string>
    <string name="save_description">Save plot data to file</string>
    <string name="play_description">Start accelerometer</string>
    <string name="pause_description">Pause accelerometer</string>
    <string name="error">Error</string>
    <string name="samples">Samples</string>
    <string name="file_saved">File saved successfully to</string>
    <string name="error_file_saved">An error has occurred. File couldn\'t be saved.</string>
    <string name="error_file_saved2">File couldn\'t be saved. Please check if filename is correct.</string>
    <string name="sensor_data">Sensor data</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="give_feedback">Give feedback</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="illumination">Illumination</string>
    <string name="air_pressure">Air pressure</string>
    <string name="copyright">Copyright &#169;</string>
    <string name="all_rights">All rights reserved.</string>
    <string name="sensor_details">Sensor details</string>
    <string name="saving_file">Saving file&#8230;</string>
    <string name="enter_filename">Enter filename</string>
    <string name="file_exists">File already exists</string>
    <string name="replace">Do you want to replace it?</string>
    <string name="acceleration">Acceleration</string>
    <string name="magnetic_field">Magnetic field</string>
    <string name="light">Light</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="rotation_vector">Rotation vector</string>
    <string name="gravity">Gravity</string>
    <string name="linear_acceleration">Linear acceleration</string>
    <string name="ambient_temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="main_menu">Main menu</string>
    <string name="monitor">Monitor</string>
    <string name="acceleration_description">Measures the acceleration force in m/s&#178; that is applied to a device on all three physical axes (x, y, and z), including the force of gravity.</string>
    <string name="magnetic_field_description">Measures the ambient geomagnetic field for all three physical axes (x, y, z) in &#181;T.</string>
    <string name="light_description">Measures the ambient light level (illumination) in lx.</string>
    <string name="gyroscope_description">Measures a device\'s rate of rotation in rad/s around each of the three physical axes (x, y, and z).</string>
    <string name="rotation_vector_description">Measures the orientation of a device by providing the three elements of the device\'s rotation vector.</string>
    <string name="gravity_description">Measures the force of gravity in m/s&#178; that is applied to a device on all three physical axes (x, y, z).</string>
    <string name="linear_acceleration_description">Measures the acceleration force in m/s&#178; that is applied to a device on all three physical axes (x, y, and z), excluding the force of gravity.</string>
    <string name="ambient_temperature_description">Measures the ambient room temperature in degrees Celsius (&#176;C).</string>
    <string name="pressure_description">Measures the ambient air pressure in hPa or mbar.</string>
    <string name="relative_humidity_description">Measures the relative ambient humidity in percent (&#37;).</string>
    <string name="sensor_info">Sensor info</string>
    <string name="plot_samples">X-axis range</string>
    <string name="events">samples</string>
    <string name="milliseconds">milliseconds</string>
    <string name="delay_time">Sampling rate</string>
    <string name="save_samples">Save index</string>
    <string name="save_samples_summary">Show sensor event index in data file</string>
    <string name="save_timestamp">Save timestamp</string>
    <string name="save_timestamp_summary">Show sensor event timestamp in data file</string>
    <string name="monitor_settings">General</string>
    <string name="file_settings">Data file</string>
    <string name="range_error">Insert a value between 5 and 5000</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">The author shall not, under any circumstances, be liable for any indirect, incidental, consequential, special or exemplary 
        damages arising out of or in connection with the use of this application, whether based on breach of service, tort 
        (including negligence, product liability or otherwise), or any other pecuniary loss, whether or not the author has been advised of the possibility 
        of such damages. Under no circumstances shall the author be liable for any amount. And you will be solely responsible for any damage that results from the 
        use of this application including, but not limited to, any damage to your computer system or loss of data.</string>
    <string name="about_description1">Sensor Monitor is designed to monitor your Android device sensors.</string>
    <string name="about_description2">This app detects all available sensors on your device, gives visual feedback of the sensor\'s values in real-time and allows you to save the acquired data into a file for post-processing.</string>
    <string name="feedback1">To leave feedback to help improve this app, report bugs or even suggest new features, send a message to this e-mail:</string>
    <string name="feedback2">I\'ll be happy to incorporate your suggestions in future releases.</string>
    <string name="about1">To start monitoring a sensor\'s activity, select a sensor from the Main menu.</string>
    <string name="about2">Android-powered devices have built-in sensors that can be divided into 3 categories.</string>
    <string name="sensors">Sensors</string>
    <string name="motion_sensors">Motion sensors</string>
    <string name="environmental_sensors">Environmental sensors</string>
    <string name="position_sensors">Position sensors</string>
    <string name="motion_info">Useful for monitoring movement, such as tilt, shake, rotation or swing.</string>
    <string name="position_info">Useful for determining the physical position in the world\'s frame of reference.</string>
    <string name="environmental_info">They monitor relative ambient humidity, illuminance, ambient pressure and temperature.</string>
    <string name="disabled_info">If a sensor is disabled, your device doesn\'t support it.</string>
    <string name="more_info">To view sensor\'s capabilities and description, click the info button.</string>
    <string name="instruction2">To begin acquiring and visualizing sensor data, click Play.</string>
    <string name="instruction4">To pause acquisition, click Pause. To continue, click Play again.</string>
    <string name="instruction5">To clear all data, click Reset. All unsaved data will be lost.</string>
    <string name="instruction6">To save the sensor data into a file, click Save. You\'ll be notified of the file location.</string>
    <string name="settings_instruction1">Allows you to configure visualization parameters and customize the data file.</string>
    <string name="settings_instruction2">Sets the maximum number of samples in the X axis range. Value should be between 5 and 5000. Default is 100 samples.</string>
    <string name="settings_instruction3">Sets the rate of events. This is only a hint to the system, events may be received faster or slower than the specified rate. Default is UI which corresponds to a delay of 60 milliseconds.</string>
    <string name="settings_instruction4">Adds a new column to the data text file with the index of the sensor event.</string>
    <string name="settings_instruction5">Adds a new column to the data text file with the timestamp of the sensor event.</string>
    <string name="about_sensor">About the sensor</string>
    <string name="how_it_works">How it works</string>
    <string name="name">Name</string>
    <string name="vendor">Vendor</string>
    <string name="version">Version</string>
    <string name="power">Power</string>
    <string name="resolution">Resolution</string>
    <string name="axis_device_description">Coordinate system (relative to a device) that\'s used by the Sensor API.</string>
    <string name="axis_globe_description">Coordinate system used by the rotation vector sensor.</string>
    <string name="acc_description1">An acceleration sensor measures the acceleration force applied to the device in m/s&#178;, including the force of gravity.</string>
    <string name="acc_description2">It uses a standard 3-axis coordinate system (x, y, z) to express data values.</string>
    <string name="acc_description3">The accelerometer is a good sensor to use if you are monitoring device motion.</string>
    <string name="gravity_description1">The gravity sensor measures the acceleration force applied to the device in m/s&#178;.</string>
    <string name="gravity_description2">It provides a three dimensional vector (x, y, z) indicating the direction and magnitude of gravity.</string>
    <string name="gravity_description3">Common uses include motion detection like shake or tilt.</string>
    <string name="gyro_description1">The gyroscope measures the rate or rotation in rad/s around a device\'s x, y, and z axis.</string>
    <string name="gyro_description2">Rotation is positive in the counter-clockwise direction; that is, an observer looking from some positive location on the x, y or z axis at a device positioned on the origin would report positive rotation if the device appeared to be rotating counter clockwise.</string>
    <string name="gyro_description3">Can be used for rotation detection (spin, turn, etc.)</string>
    <string name="hum_description1">Measures the relative ambient humidity in percent (&#37;).</string>
    <string name="hum_description2">This sensor is hardware-based and is available only if a device manufacturer has built them into a device.</string>
    <string name="light_description1">Measures the ambient light level (illumination) in lx.</string>
    <string name="light_description2">Most device manufacturers use this sensor to control screen brightness.</string>
    <string name="lin_acc_description1">The linear acceleration sensor provides you with a three-dimensional vector representing acceleration along each device axis, excluding gravity.</string>
    <string name="lin_acc_description2">The sensor coordinate system is the same as the one used by the acceleration sensor, as are the units of measure (m/s&#178;).</string>
    <string name="lin_acc_description3">You typically use this sensor when you want to obtain acceleration data without the influence of gravity. For example, you could use this sensor to see how fast your car is going.</string>
    <string name="mag_description1">The geomagnetic field sensor lets you monitor changes in the earth\'s magnetic field.</string>
    <string name="mag_description2">This sensor provides raw field strength data (in &#181;T) for each of the three coordinate axes.</string>
    <string name="mag_description3">Common uses include the creation of a compass.</string>
    <string name="pressure_description1">Measures the ambient air pressure in hPa.</string>
    <string name="pressure_description2">This sensor is hardware-based and is available only if a device manufacturer has built them into a device.</string>
    <string name="pressure_description3">Can be used to monitor air pressure changes.</string>
    <string name="rot_description1">The rotation vector represents the orientation of the device as a combination of an angle and an axis, in which the device has rotated through an angle θ around an axis (x, y, or z).</string>
</resources>